--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ nav {
   gap: 2rem;
   list-style: none;
 }
+.nav-menu a {
+  color: #2d2e32;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.23s;
+}
+.nav-menu a:hover {
+  color: #239bca;
+  transition: all 0.5s;
+}
 
 #hero {
   height: auto;
@@ -208,4 +218,24 @@ nav {
 
 .contact-link:hover {
   background-color: #0056b3;
+}
+footer {
+  background-color: #2d2e32;
+  padding: 5rem 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer > .container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 107rem;
+  padding: 0 4rem;
+  width: 75%;
+}
+.footercpr {
+  color: #ffffff;
 }
