--- a/style.css
+++ b/style.css
@@ -145,6 +145,12 @@ nav {
   text-align: center;
   margin-bottom: 3rem;
 }
+.projects h3 {
+  margin-bottom: 1rem;
+}
+.projects img {
+  margin-bottom: 1rem;
+}
 .carousel-container {
   position: relative;
   max-width: 800px;
