--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav {
 .hero-image {
   -webkit-animation: morph 8s ease-in-out infinite;
   animation: morph 8s ease-in-out infinite;
-  background-image: url("assets/mirkoterzic.jpg");
+  background-image: url("https://raw.githubusercontent.com/mirkoterzic/MyPortfolio/main/assets/mirkoterzic.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   border: 3px solid #2d2e32;
@@ -98,7 +98,7 @@ nav {
   gap: 1rem;
 }
 .about {
-  background-image: url("assets/about=background.jpg");
+  background-image: url("https://raw.githubusercontent.com/mirkoterzic/MyPortfolio/main/assets/about%3Dbackground.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
